
package PFK.Chat;

message Username {
	required string username = 1;
}
message NewUsername {
	required string oldusername = 1;
	required string newusername = 2;
}
message IM_Message {
	required string username = 1;
	required string msg = 2;
}
enum ClientToServerType {
	CTS_LOGIN = 1;            // use 'login'
	CTS_CHANGE_USERNAME = 2;  // use 'changeUsername'
	CTS_IM_MESSAGE = 3;       // use 'imMessage'
	CTS_PING = 4;             // no msg body
}
message ClientToServer {
	required ClientToServerType type = 1;
	optional Username login = 2;
	optional NewUsername changeUsername = 3;
	optional IM_Message imMessage = 4;
}

message UserList {
	repeated string usernames = 1;
}
message UserStatus {
	repeated string username = 1;
	required string status = 2;
}
message Notification {
	required string username = 1;
}
enum ServerToClientType {
	STC_USER_LIST = 1;           // use 'userList'
	STC_USER_STATUS = 2;         // ?
	STC_LOGIN_NOTIFICATION = 3;  // use 'notification'
	STC_LOGOUT_NOTIFICATION = 4; // use 'notification'
	STC_CHANGE_USERNAME = 5;     // use 'changeUsername'
	STC_IM_MESSAGE = 6;          // use 'imMessage'
	STC_PONG = 7;                // no msg body
}
message ServerToClient {
	required ServerToClientType type = 1;
	optional UserList userList = 2;
	optional UserStatus userStatus = 3;
	optional Notification notification = 4;
	optional NewUsername changeUsername = 5;
	optional IM_Message imMessage = 6;
}
